--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.3.2",
+    "express": "^4.18.1",
+    "mongoose": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
-  }
+  },
+  "proxy": "https://legendary-space-telegram-qjrvwpg57xcx4jg-3000.githubpreview.dev"
 }
