--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "express": "^4.18.1",
     "mongoose": "^8.1.0"
